--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,14 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Docker関連
+.docker/
+docker-compose.override.yml
+.env.dev
+
+# その他
+.DS_Store
+
 # エディタ設定
 .idea/
 .vscode/
