--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "start": "node dist/bot.js",
     "dev": "ts-node src/bot.ts",
     "watch": "tsc --watch",
+    "docker:build": "docker-compose build",
+    "docker:start": "docker-compose up -d",
+    "docker:stop": "docker-compose down",
+    "docker:logs": "docker-compose logs -f",
+    "docker:dev": "docker-compose -f docker-compose.dev.yml up -d --build",
+    "docker:dev:stop": "docker-compose -f docker-compose.dev.yml down",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
