機能追加: トラブルシューティングガイドをREADME.mdに追加し、スラッシュコマンドの重複問題に関する詳細な手順を記載。Docker環境でのコマンド管理を改善するため、clear-commands.tsスクリプトを新規作成し、既存コマンドのクリア機能を実装。bot.tsでのコマンド登録時に重複を防ぐ処理を追加。

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,9 +6,10 @@ services:
       context: .
       dockerfile: Dockerfile.dev
     container_name: trello-discord-bot-dev
-    restart: unless-stopped
+    restart: unless-stopped    
     env_file:
-      - .env.dev    volumes:
+      - .env.dev
+    volumes:
       # ホスト側のソースコードをマウント
       - ./src:/app/src
       - ./package.json:/app/package.json
