機能追加: 環境変数ファイルにDiscordボットのクライアントIDとサーバーIDの設定を追加し、README.mdにセキュリティガイドラインを追加。clear-commands.tsでギルドIDを環境変数から取得するように修正。`.gitignore`を更新し、環境変数ファイルの管理を強化。

--- a/.env.dev.example
+++ b/.env.dev.example
@@ -1,7 +1,16 @@
 # 開発環境用の環境変数ファイル
 # 実際の値は.env.devファイルに設定してください（このファイルは.gitignoreに追加）
+
+# Discord Bot設定（開発環境用）
 DISCORD_TOKEN=開発用Discordボットトークン
 DISCORD_CHANNEL_ID=開発用チャンネルID
+CLIENT_ID=開発用DiscordボットのクライアントID
+GUILD_ID=開発用サーバー（ギルド）ID
+
+# Trello API設定（開発環境用）
 TRELLO_API_KEY=開発用TrelloのAPIキー
 TRELLO_TOKEN=開発用Trelloトークン
-TRELLO_BOARD_ID=開発用Trelloボード
+TRELLO_BOARD_ID=開発用Trelloボード（省略可能）
+
+# Docker関連設定（オプション）
+CONFIG_DIR=/app/config
