--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
+# Discord Bot設定
 DISCORD_TOKEN=あなたのDiscordボットトークン
 DISCORD_CHANNEL_ID=通知を送信したいチャンネルのID
+CLIENT_ID=DiscordボットのクライアントID（OAuth2タブで確認可能）
+GUILD_ID=特定のサーバー(ギルド)にだけコマンドを登録する場合のID
+
+# Trello API設定
 TRELLO_API_KEY=あなたのTrello APIキー
 TRELLO_TOKEN=あなたのTrelloトークン
-TRELLO_BOARD_ID=監視したいTrelloボードID
+TRELLO_BOARD_ID=監視したいTrelloボードID（省略可能、後でコマンドから設定可）
+
+# Docker関連設定（オプション）
+CONFIG_DIR=/app/config
